feat: adiciona fontes e define variáveis globais de tipografia

--- a/styles/global.css
+++ b/styles/global.css
@@ -3,3 +3,22 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+:root {
+  --font-logo: "Leckerli One", cursive;
+  --font-heading: "Baloo 2", sans-serif;
+  --font-body: "Open Sans", sans-serif;
+
+  --logo: 400 2.5rem/normal var(--font-logo);
+
+  --heading-md: 700 1.75rem/normal var(--font-heading);
+  --heading-sm: 700 1.125rem/normal var(--font-heading);
+
+  --body-md-regular: 400 1rem/normal var(--font-body);
+  --body-sm-regular: 400 0.875rem/normal var(--font-body);
+  --body-xs-regular: 400 0.75rem/normal var(--font-body);
+}
+
+body {
+  font: var(--body-md-regular);
+}
