--- a/styles/global.css
+++ b/styles/global.css
@@ -5,6 +5,7 @@
 }
 
 :root {
+  /* === FONTES === */
   --font-logo: "Leckerli One", cursive;
   --font-heading: "Baloo 2", sans-serif;
   --font-body: "Open Sans", sans-serif;
@@ -14,9 +15,38 @@
   --heading-md: 700 1.75rem/normal var(--font-heading);
   --heading-sm: 700 1.125rem/normal var(--font-heading);
 
-  --body-md-regular: 400 1rem/normal var(--font-body);
-  --body-sm-regular: 400 0.875rem/normal var(--font-body);
-  --body-xs-regular: 400 0.75rem/normal var(--font-body);
+  --body-md: 400 1rem/normal var(--font-body);
+  --body-sm: 400 0.875rem/normal var(--font-body);
+  --body-xs: 400 0.75rem/normal var(--font-body);
+
+  /* === CORES === */
+  --text-body: #C8CDD0;
+  --text-heading: #F9F9F9;
+
+  --brand-light: #59B2FF;
+  --brand-mid: #3487CF;
+  --brand-dark: #1D6FB6;
+
+  --shape-background: #131516;
+  --shape-body: #212427;
+  --shape-button: #2D3136;
+  --shape-hover: #383D42;
+
+  --input-base: #1C1F21;
+  --input-stroke: #363B40;
+  --input-placeholder: #869198;
+
+  --feedback-danger: #FF5959;
+
+  --purple: #B259FF;
+  --fuschia: #FF59F9;
+  --pink: #FF598B;
+  --orange: #FF8B59;
+  --yellow: #FFCD59;
+  --lime: #E1FF59;
+  --green: #59FF91;
+  --cyan: #59FFF9;
+  --navy: #6A59FF;
 }
 
 body {
