--- a/styles/layout.css
+++ b/styles/layout.css
@@ -6,20 +6,29 @@
   justify-content: center; 
   gap: 1.25rem;
 
+  padding-block: 1.25rem;
+
   overflow: hidden;
 }
 
 aside {
   & .aside-container {
-    background-color: white;
-    height: 100vh;
+    background-image: url(../assets/background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+
+    border-radius: 0.75rem;
   }
 }
 
 main {
   overflow: auto;
-
+  
   & .main-container {
-    background-color: bisque;
+    background-color: var(--shape-body);
+    border-radius: 0.75rem;
+
+    padding: 5rem 8.125rem;
   }
 }
