style: adiciona titulo do formulário

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -52,5 +52,12 @@ main {
     border-radius: 0.75rem;
 
     padding: 5rem 8.125rem;
+
+    height: 100%; /* temporario, apagar depois */
+  }
+
+  & h1 {
+    font: var(--heading-md);
+    color: var(--text-heading);
   }
 }
