--- a/styles/form.css
+++ b/styles/form.css
@@ -21,9 +21,13 @@ legend {
   align-items: center;
   gap: 0.75rem;
 
-  & img {
+  & svg {
     width: 1.5rem;
     height: 1.5rem;
+
+    & path {
+      fill: var(--input-placeholder);
+    }
   }
 }
 
