--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -5,7 +5,9 @@ label {
   margin-bottom: 0.75rem;
 }
 
-input {
+input,
+textarea {
+  appearance: none;
   width: 100%;
   height: 3rem;
   border: none;
@@ -15,8 +17,14 @@ input {
   background-color: var(--input-base);
   color: var(--input-placeholder);
 
-  padding: 0.8125rem 1rem;
+  padding: 1rem;
   border-radius: 0.5rem;
+
+  resize: none;
+}
+
+textarea {
+  height: 8.5rem;
 }
 
 input[type="datetime-local"] {
@@ -32,7 +40,8 @@ input[type="datetime-local"] {
   }
 }
 
-input:focus {
+input:focus,
+textarea:focus {
   outline: 1px solid var(--brand-light);
   color: var(--text-heading);
 }
