--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -24,25 +24,47 @@ textarea {
   resize: none;
 }
 
-textarea {
-  height: 8.5rem;
-}
-
-input[type="datetime-local"] {
-  text-transform: uppercase;
-  position: relative;
-
-  &::-webkit-calendar-picker-indicator {
-    opacity: 0;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 50%;
-  }
-}
-
 input:focus,
 textarea:focus {
   outline: 1px solid var(--brand-light);
   color: var(--text-heading);
+
+  &:invalid {
+    outline: 1px solid var(--feedback-danger);
+  }
+}
+
+input {
+  &[type="datetime-local"] {
+    text-transform: uppercase;
+    position: relative;
+
+    &::-webkit-calendar-picker-indicator {
+      opacity: 0;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 50%;
+    }
+  }
+
+  &[required] + .error {
+    gap: 0.5rem;
+    margin-top: 0.5rem;
+
+    color: var(--feedback-danger);
+    font: var(--body-xs);
+  }
+
+  &:invalid {
+    outline: 1px solid var(--feedback-danger);
+  }
+
+  &:not(:focus):valid + .error {
+    display: none;
+  }
+}
+
+textarea {
+  height: 8.5rem;
 }
