feat: cria e estiliza seção de termos e condições

--- a/styles/fields/checkbox.css
+++ b/styles/fields/checkbox.css
@@ -1,4 +1,4 @@
-.checkbox-wrapper {
+.switch-wrapper {
   height: 3rem;
   display: flex;
   align-items: center;
@@ -50,7 +50,7 @@
   & .label {
     font: var(--body-sm);
     color: var(--text-heading);
-    margin-left: 0.75rem;;
+    margin-left: 0.75rem;
   }
 
   & .label::before {
@@ -59,5 +59,49 @@
 
   input:checked ~ .label::before {
     content: "Claro";
+  }
+}
+
+.terms-wrapper {
+  border-top: 1px solid var(--input-stroke);
+  padding-top: 2.5rem;
+
+  display: grid;
+  gap: 0.25rem;
+
+  .checkbox-wrapper {
+    height: 1.75rem;
+    gap: 0.75rem;
+    align-items: center;
+    cursor: pointer;
+
+    position: relative;
+
+    & label {
+      margin-bottom: 0;
+
+      & a {
+        font-weight: 600;
+        color: var(--brand-light);
+      }
+    }
+
+    & [type="checkbox"] {
+      all: unset;
+      position: absolute;
+      inset: 0;
+    }
+
+    & .checkbox-image {
+      flex: 0 0 1.25rem;
+      height: 1.25rem;
+
+      background-image: url(../../assets/icons/unchecked.svg);
+      background-repeat: no-repeat;
+    }
+
+    &:has(:checked) .checkbox-image {
+      background-image: url(../../assets/icons/checked.svg);
+    }
   }
 }
