--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -63,6 +63,14 @@ input {
   &:not(:focus):valid + .error {
     display: none;
   }
+
+  /* remove spinner do input number */
+  &[type="number"]::-webkit-outer-spin-button,
+  &[type="number"]::-webkit-inner-spin-button {
+    -moz-appearance: textfield;
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
 
 textarea {
